@@ -4,6 +4,7 @@ ChangeLog
 
 current:
 
+- add "Debug Unparsed Text" theme, highlighting unparsed text
 - adjust treebuilder and highlighter to the new peek() call of parce.treebuilder
 - debug window:
   - new commands to show/hide the tree and to reload the theme stylesheet
